# szu_cg_lab3

./: .gitignore  CMakeLists.txt  Camera.cpp  InitShader.cpp  TriMesh.cpp  digest.txt  glad.c  main.cpp  readme.md
include/: Camera.h
shaders/: fshader.glsl  vshader.glsl
